@@ -21,3 +21,9 @@ input#view_search_string, input.typeahead.tt-hint		{font-size:32px; width:936px;
 select.chosen			{width:300px;min-width:300px;max-width:300px;}
 
 .tt-menu img			{width:16px; height:16px;}
+
+#search_div				{color:#FFF; margin-top:20px;}
+
+a#search_link			{display:block; padding:25px 20px; border-radius:8px; background-color:rgba(0,14,32,0.7); text-align:center; margin:0 auto; color:#53B4ED; font-size:1.6em; margin-top:40px;}
+a#search_link span		{display:block; color:#83AEC7; font-style:italic; font-size:0.6em; padding-top:5px;}
+a#search_link:hover		{background-color:rgba(0,14,32,0.9);}
