@@ -59,12 +59,10 @@
 
 <div id="search_div">
 <div>
-<span id="search_span">
-	SEARCH FOR :
-</span>
+<span id="search_span"></span>
 </div>
 <div>
-<a id="search_link" target="_BLANK">EXPLORE SEARCH RESULTS (OPENS IN NEW WINDOW)</a>
+<a id="search_link" target="_BLANK">Explore Search Results<span>(Opens in new window)</span></a>
 </div>
 </div>
 	
