@@ -4,6 +4,7 @@ Added translations for Search
 Added Search headers for main pages
 Added classes to Search columns
 Optimised Search layout
+Added buttons and new info text for Search
 
 
 Development Portal (2015-06-24 shi)
